[gd_scene load_steps=50 format=2]

[ext_resource path="res://Player/Sprites/Idle__004.png" type="Texture" id=1]
[ext_resource path="res://Player/Sprites/Idle__005.png" type="Texture" id=2]
[ext_resource path="res://Player/Sprites/Idle__002.png" type="Texture" id=3]
[ext_resource path="res://Player/Sprites/Idle__000.png" type="Texture" id=4]
[ext_resource path="res://Player/Sprites/Idle__003.png" type="Texture" id=5]
[ext_resource path="res://Player/Sprites/Idle__001.png" type="Texture" id=6]
[ext_resource path="res://Player/Player.gd" type="Script" id=7]
[ext_resource path="res://Player/Sprites/Idle__006.png" type="Texture" id=8]
[ext_resource path="res://Player/Sprites/Idle__009.png" type="Texture" id=9]
[ext_resource path="res://Player/Sprites/Idle__008.png" type="Texture" id=10]
[ext_resource path="res://Player/Sprites/Idle__007.png" type="Texture" id=11]
[ext_resource path="res://Player/Sprites/Run__007.png" type="Texture" id=12]
[ext_resource path="res://Player/Sprites/Throw__002.png" type="Texture" id=13]
[ext_resource path="res://Player/Sprites/Jump__009.png" type="Texture" id=14]
[ext_resource path="res://Player/Sprites/Throw__001.png" type="Texture" id=15]
[ext_resource path="res://Player/Sprites/Throw__003.png" type="Texture" id=16]
[ext_resource path="res://Player/Sprites/Run__003.png" type="Texture" id=17]
[ext_resource path="res://Player/Sprites/Run__009.png" type="Texture" id=18]
[ext_resource path="res://Player/Sprites/Run__002.png" type="Texture" id=19]
[ext_resource path="res://Player/Sprites/Throw__006.png" type="Texture" id=20]
[ext_resource path="res://Player/Sprites/Run__006.png" type="Texture" id=21]
[ext_resource path="res://Player/Sprites/Jump__007.png" type="Texture" id=22]
[ext_resource path="res://Player/Sprites/Jump__005.png" type="Texture" id=23]
[ext_resource path="res://Player/Sprites/Throw__009.png" type="Texture" id=24]
[ext_resource path="res://Player/Sprites/Run__008.png" type="Texture" id=25]
[ext_resource path="res://Player/Sprites/Run__004.png" type="Texture" id=26]
[ext_resource path="res://Player/Sprites/Run__005.png" type="Texture" id=27]
[ext_resource path="res://Player/Sprites/Run__001.png" type="Texture" id=28]
[ext_resource path="res://Player/Sprites/Jump__006.png" type="Texture" id=29]
[ext_resource path="res://Player/Sprites/Run__000.png" type="Texture" id=30]
[ext_resource path="res://Player/Sprites/Jump__008.png" type="Texture" id=31]
[ext_resource path="res://Player/Sprites/Throw__000.png" type="Texture" id=32]
[ext_resource path="res://Player/Sprites/Throw__005.png" type="Texture" id=33]
[ext_resource path="res://Player/Sprites/Throw__007.png" type="Texture" id=34]
[ext_resource path="res://Player/Sprites/Throw__004.png" type="Texture" id=35]
[ext_resource path="res://Player/Sprites/Throw__008.png" type="Texture" id=36]
[ext_resource path="res://Player/Sprites/Dead__004.png" type="Texture" id=37]
[ext_resource path="res://Player/Sprites/Dead__009.png" type="Texture" id=38]
[ext_resource path="res://Player/Sprites/Dead__000.png" type="Texture" id=39]
[ext_resource path="res://Player/Sprites/Dead__001.png" type="Texture" id=40]
[ext_resource path="res://Player/Sprites/Dead__005.png" type="Texture" id=41]
[ext_resource path="res://Player/Sprites/Dead__008.png" type="Texture" id=42]
[ext_resource path="res://Player/Sprites/Dead__003.png" type="Texture" id=43]
[ext_resource path="res://Player/Sprites/Dead__002.png" type="Texture" id=44]
[ext_resource path="res://Player/Sprites/Dead__006.png" type="Texture" id=45]
[ext_resource path="res://Player/Sprites/Dead__007.png" type="Texture" id=46]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 107.601, 219.806 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 20 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 24 ) ],
"loop": false,
"name": "throw",
"speed": 20.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 38 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 25 ), ExtResource( 18 ) ],
"loop": true,
"name": "moveRight",
"speed": 24.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 29 ), ExtResource( 22 ), ExtResource( 31 ), ExtResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55, 115.603 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "idle"
frame = 7
playing = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="pos_bala" type="Position2D" parent="."]
position = Vector2( 113.964, 17.315 )

[node name="Reload" type="Timer" parent="."]

[node name="pos_bala_left" type="Position2D" parent="."]
position = Vector2( -113.964, 17.315 )
[connection signal="changeKunais" from="." to="." method="_on_Player_changeKunais"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
